Address onboarding Sonar findings