@@ -8,16 +8,20 @@ import com.soccialy.backend.entity.User;
 import com.soccialy.backend.mapper.UserMapper;
 import com.soccialy.backend.repository.FilterRepository;
 import com.soccialy.backend.repository.UserRepository;
+import org.slf4j.Logger;
+import org.slf4j.LoggerFactory;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.stereotype.Service;
 
 import java.util.HashSet;
 import java.util.List;
 import java.util.Set;
-import java.util.stream.Collectors;
 
 @Service
 public class UserService {
+
+    private static final Logger LOGGER = LoggerFactory.getLogger(UserService.class);
+    private static final String USER_NOT_FOUND_WITH_ID = "User not found with id: ";
 
     @Autowired
     private UserRepository userRepository;
@@ -31,12 +35,12 @@ public class UserService {
     public List<UserDTO> findAllUsers() {
         return userRepository.findAll().stream()
                 .map(userMapper::toDTO)
-                .collect(Collectors.toList());
+                .toList();
     }
 
     public UserDTO findUserById(Integer id) {
         User user = userRepository.findById(id)
-                .orElseThrow(() -> new RuntimeException("User not found with id: " + id));
+                .orElseThrow(() -> new RuntimeException(USER_NOT_FOUND_WITH_ID + id));
         return userMapper.toDTO(user);
     }
 
@@ -55,7 +59,7 @@ public class UserService {
 
     public UserDTO updateUserById(Integer userId, UpdateUserDTO updateDTO) {
         User user = userRepository.findById(userId)
-                .orElseThrow(() -> new RuntimeException("User not found with id: " + userId));
+                .orElseThrow(() -> new RuntimeException(USER_NOT_FOUND_WITH_ID + userId));
 
         return updateUserEntity(user, updateDTO);
     }
@@ -70,10 +74,10 @@ public class UserService {
         if (updateDTO.getFilterIds() != null) {
             Set<Filter> filters = new HashSet<>(filterRepository.findAllById(updateDTO.getFilterIds()));
             user.setFilters(filters);
-            System.out.println("Saved filters for user " + user.getUsername() + ": " +
+            LOGGER.info("Saved filters for user {}: {}", user.getUsername(),
                     filters.stream()
                             .map(filter -> filter.getId() + ":" + filter.getName())
-                            .collect(Collectors.toList()));
+                            .toList());
         }
 
         User saved = userRepository.save(user);
@@ -82,7 +86,7 @@ public class UserService {
 
     public List<FilterDTO> getUserFilters(Integer userId) {
         User user = userRepository.findById(userId)
-                .orElseThrow(() -> new RuntimeException("User not found with id: " + userId));
+                .orElseThrow(() -> new RuntimeException(USER_NOT_FOUND_WITH_ID + userId));
         return user.getFilters().stream()
                 .map(f -> {
                     FilterDTO dto = new FilterDTO();
@@ -90,7 +94,7 @@ public class UserService {
                     dto.setName(f.getName());
                     return dto;
                 })
-                .collect(Collectors.toList());
+                .toList();
     }
 
     public UserDTO saveUser(UserDTO userDTO) {
@@ -102,7 +106,7 @@ public class UserService {
     public List<Integer> getUserProfileFilters(Integer userId) {
         return getUserFilters(userId).stream()
                 .map(FilterDTO::getId)
-                .collect(Collectors.toList());
+                .toList();
     }
 
     public com.soccialy.backend.entity.Coordinates getUserCoordinates(Integer userId) {
